# open-xiaoai

./: .gitignore  README.md  test-rhel-client.sh
.github/workflows/: build.yml  release.yml
docs/: RELEASE.md  kws-setup.md
examples/migpt/: .env.example  Cargo.toml  Dockerfile  README.md  config.template.ts  config.ts  deploy-binary.sh  deploy-docker.sh  generate-config.sh
examples/migpt/src/: lib.rs  server.rs
examples/secure-ws/: Cargo.toml  README.md
examples/secure-ws/src/: lib.rs  main.rs  server.rs  tls.rs
scripts/: build-release.sh
utils/: README.md  boot.sh  deploy-kws.sh  device-copy.sh  install-boot.sh  keywords.py  manage-wake-words.sh  quick-release.sh  remote-build-client.sh  setup-kws.sh  ssh-mi.sh
