[package]
name = "open_xiaoai_server"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"

[dependencies]
neon = { version = "1.1.0-alpha.1", features = ["napi-6", "futures", "tokio"] }
open-xiaoai = { path = "../../packages/client-rust" }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
regex = "1.10"
uuid = { version = "1.10", features = ["v4"] }
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
