[package]
name = "open_xiaoai_secure_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "secure-ws"
path = "src/main.rs"

[dependencies]
open-xiaoai = { path = "../../packages/client-rust" }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
parking_lot = "0.12"
anyhow = "1"
tokio-tungstenite = "0.26.2"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", features = ["logging"] }

